--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,6 +1,11 @@
-<app-header></app-header>
-<div class="container">
-  <app-sidebar></app-sidebar>
+<div class="header-wrap">
+  <app-header (burgerToggleOut)="stateBurger($event)"></app-header>
+</div>
+<div class="container-content">
+  <div class="{{burgerToggle?'sidebar-wrap':'sidebar-wrap_mobile'}}">
+    <app-sidebar [burgerState]="burgerToggle"></app-sidebar>
+  </div>
   <div class="content-wrapper">
+    <app-main-page></app-main-page>
   </div>
 </div>
